bonus/confs/dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev
  labels:
    app: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev
  template:
    metadata:
      labels:
        app: dev
    spec:
      containers:
        - name: dev
          image: wil42/playground:v1
          ports:
            - containerPort: 8888

---
apiVersion: v1
kind: Service
metadata:
  name: dev
spec:
  selector:
    app: dev
  ports:
    - name: http
      protocol: TCP
      port: 8888
