bonus/confs/gitlab.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-external
  namespace: gitlab
spec:
  type: LoadBalancer
  selector:
    app: webservice
  ports:
    - port: 8080
      targetPort: 8181
